<resources>
    <string name="app_name">moneybook</string>
    <string name="empty_history_text">추가한 테스크가 없습니다.</string>
    <string name="title">제목</string>
    <string name="description">메모</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="update">저장</string>
    <string name="delete_all">Delete All</string>
    <string name="date">날짜</string>
    <string name="pick_date">선택</string>
    <string name="money">금액</string>
    <string name="card_or_cash">카드/현금</string>
    <string name="use">사용처</string>
    <string name="income">수입</string>
    <string name="outcome">지출</string>
    <string name="result">합계</string>
    <string name="add_todo_btn">addToDoButton</string>
</resources>